# read-wise

./: .env.example  .gitignore  ENV_SETUP.md  LICENSE  MONGODB_SETUP.md  QDRANT_SETUP.md  RAG_IMPLEMENTATION_PLAN.md  RAG_SYSTEM_DESIGN.md  README.md  ReadWise_PRD.md  docker-compose.yml  project_rules.md  setup.sh  start.sh  test_api.py  test_book.txt  test_chunking.py  test_mongodb.sh  test_openai_client.py  test_upload.py  test_vector_search.py  update_book_content.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_rag_system.py
backend/agents/: executor.py  planner.py  state.py  tools.py  workflow.py
backend/api/: books.py  chat.py  logs.py
backend/config/: rag_config.py
backend/models/: book.py  database.py  rag_models.py
backend/services/: book_processor.py  deepseek_client.py  embedding_service.py  openai_client.py  rag_service.py  vector_service.py
backend/utils/: env.py  file_utils.py  logger.py  text_processing.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  react-app-env.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BookAnalysisTabs.js  BookCard.js  BookList.js  BookMetadata.js  BookStatusChip.js  ConfirmDialog.js  EmptyState.js  FileUpload.js  FileUploader.js  Footer.js  Layout.js  (+8 more)
mongo-init/: init.js
(+80 files in other folders)
